--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/SmarterServices/checkeeper-node-client#readme",
   "dependencies": {
+    "camelcase-keys": "^4.1.0",
     "joi": "latest",
     "lodash.get": "^4.4.2",
     "lodash.omit": "^4.5.0",
