--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/SmarterServices/checkeeper-node-client#readme",
   "dependencies": {
     "camelcase-keys": "^4.1.0",
-    "joi": "latest",
+    "joi": "^11.1.1",
     "lodash.get": "^4.4.2",
     "lodash.omit": "^4.5.0",
     "lodash.snakecase": "^4.1.1",
